tests/neg-custom-args/captures/cc-this4.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this4.scala:2:13 --------------------------------------
2 |  val x: C = this  // error
  |             ^^^^
  |             Found:    (C.this : C^{any})
  |             Required: C
  |
  |             Note that capability `any` cannot flow into capture set {}.
  |
  |             where:    any is the root capability caps.any
  |
  | longer explanation available when compiling with `-explain`
